<resources>
    <string name="app_name">SecondBoard</string>
    <string name="app_title">Board\nService</string>
    <string name="enter">go!</string>
    <string name="title">title</string>
    <string name="writer">writer</string>
    <string name="ctnt">context</string>
    <string name="rdt">writeTime</string>
    <string name="handmade">CopyRight_HANDMADE</string>
    <string name="write">write</string>
    <string name="search">search</string>
    <string name="newBoard">New Board</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="Change">Change</string>
    <string name="Back">Back</string>
    <string name="msg_fial">Connection Error</string>
    <string name="okay">okay</string>
    <string name="num">PostNumber</string>
    <string name="like">Like</string>


    <string name="title_activity_write">WriteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>