<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntotheBoardActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginStart="62dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/border2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/title"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="250dp"
            android:textAlignment="center"
            android:textSize="12sp"
            android:background="@drawable/border2"
            android:layout_height="20dp"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/tvCtnt"
            android:layout_width="280dp"
            android:layout_height="409dp"
            android:textSize="12sp"
            android:layout_marginTop="30dp"
            android:background="@drawable/border2"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:background="@drawable/border2"
            android:paddingLeft="5dp"
            android:text="@string/rdt"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/border2"
            android:paddingLeft="5dp"
            android:text="@string/writer"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tvCtnt"
            app:layout_constraintTop_toBottomOf="@+id/tvCtnt" />

        <TextView
            android:id="@+id/tvWriter"
            android:layout_width="240dp"
            android:layout_height="20dp"
            android:textSize="12sp"
            android:textAlignment="center"
            android:background="@drawable/border2"
            android:visibility="visible"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/tvRDT"
            android:layout_width="210dp"
            android:textSize="12sp"
            android:layout_height="20dp"
            android:visibility="visible"
            android:background="@drawable/border2"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/tvWriter" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChange"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:background="@color/my"
            android:text="@string/Change"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnDel"
            app:layout_constraintEnd_toStartOf="@+id/btnDel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDel"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/Delete"
            android:textSize="10sp"
            android:background="@color/my"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRDT" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:background="@color/my"
            android:layout_marginStart="20dp"
            android:text="@string/Back"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnDel"
            app:layout_constraintStart_toEndOf="@+id/btnDel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/edtextView6"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginStart="62dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/border2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/title"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edTitle"
            android:layout_width="250dp"
            android:textAlignment="center"
            android:textSize="12sp"
            android:background="@drawable/border2"
            android:layout_height="20dp"
            app:layout_constraintStart_toEndOf="@+id/edtextView6"
            app:layout_constraintTop_toTopOf="@+id/edtextView6" />



        <EditText
            android:id="@+id/edCtnt"
            android:layout_width="280dp"
            android:layout_height="409dp"
            android:textSize="12sp"
            android:layout_marginTop="30dp"
            android:background="@drawable/border2"
            app:layout_constraintStart_toStartOf="@+id/edtextView6"
            app:layout_constraintTop_toBottomOf="@+id/edtextView6" />

        <TextView
            android:id="@+id/edtextView11"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:background="@drawable/border2"
            android:paddingLeft="5dp"
            android:text="@string/rdt"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/edtextView9"
            app:layout_constraintTop_toBottomOf="@+id/edtextView9" />

        <TextView
            android:id="@+id/edtextView9"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/border2"
            android:paddingLeft="5dp"
            android:text="@string/writer"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/edCtnt"
            app:layout_constraintTop_toBottomOf="@+id/edCtnt" />

        <EditText
            android:id="@+id/edWriter"
            android:layout_width="240dp"
            android:layout_height="20dp"
            android:textSize="12sp"
            android:textAlignment="center"
            android:background="@drawable/border2"
            app:layout_constraintStart_toEndOf="@+id/edtextView9"
            app:layout_constraintTop_toTopOf="@+id/edtextView9" />


        <EditText
            android:id="@+id/edRDT"
            android:layout_width="210dp"
            android:layout_height="20dp"
            android:background="@drawable/border2"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/edtextView11"
            app:layout_constraintTop_toTopOf="@+id/edtextView11" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOkay"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/okay"
            android:textSize="10sp"
            android:background="@color/my"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edRDT" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>